FindBugs:ethod invokes dubious Boolean constructor; use Boolean.valueOf(...) instead